<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">白色森林</string>
    <string name="title_activity_splash">banner</string>
    <string name="title_activity_mainpage">首页</string>
    <string name="desire">欲望</string>
    <string name="task">任务</string>
    <string name="my_task">我的使命</string>
    <string name="my_desire">我的欲望</string>
    <string name="make_task">承诺你的任务</string>
    <string name="task_add_options_1">普通任务</string>
    <string name="task_add_options_2">时间投资计划</string>
    <string name="exp_to_add">经验值:</string>
    <string name="coins_to_add">金币:</string>
    <string name="content_to_add">内容:</string>
    <string name="confirm">确认</string>
    <string name="make_desire">许下你的心愿</string>
    <string name="coins_to_cost">消耗的金币</string>
    <string name="greeting"> 你来啦</string>
    <string name="story_part1">很疑惑我是谁?\n我是弗里曼王爵的心灵意识\n\n\n你一定是想知道历史吧.\n因此我才出现\n\n\n那,从你的历史开始说吧,\n\n\n在漫世纪四一八年三月十四日\n你出生在了我们的国家的黑水王国.\n\n\n出生在一个叫边城的小镇.\n和这个世界的其他人一样, \n你是从莲花里生长出来的.</string>
    <string name="story_part2">关于世界的历史?\n黑水王国是一个高度科技的国家.\n\n\n科技之树不断地进化着\n但这个世界的人们有着其动物性缺陷\n所以人们的天性依然落后于科学的发展\n\n\n黑水王国的神灵(超人类)\n为了净化世界的人们\n\n\n在漫实际之初, \n启动了位于王国国都郊外\n白色森林中的[心灵之光]初号机\n\n\n\n于是,世界变化了.\n\n人类得以通过自己的努力,来克服天性的缺陷\n进化成更完美的人类.\n\n\n这个世界的人们, \n通过努力,获得心灵之光\n不断地进化\n\n\n有的成为了贵族, 有的成为了皇族,\n有的成为了神族, 超人类.</string>
    <string name="story_part3">现在, 你知道该怎么做了吗?\n去努力获得你的心灵之光吧.</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="confirm_password">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="motto">个性签名</string>
    <string name="change_personal_info">修改个人信息</string>
    <string name="unattained_medal">未获得:</string>
    <string name="unattained_medal2">未获得</string>
    <string name="exp_to_add_timer">经验值/分钟</string>
    <string name="coins_to_add_timer">金币/分钟</string>
    <string name="tips_input_exp">请输入经验值</string>
    <string name="tips_input_coins">请输入金币值</string>
    <string name="tips_input_content">请输入内容</string>
    <string name="click_go_on">点击以继续</string>
    <string name="task_god">使命之神</string>
    <string name="desire_god">欲望之神</string>
    <string name="cancel">取消</string>
    <string name="desire_use_tip">将花费 %1$d 个金币\n你确定要使用吗</string>
    <string name="store_coins_tip">当前金币数量 : %1$d 个</string>
    <string name="coins_soul_tip">金币 : %1$d 个 | 心灵值 : %2$d</string>
    <string name="coins_not_enough">金币不够, 完成你向使命之神承诺的任务以获得更多金币</string>
    <string name="task_delete_tip">删除后不可恢复\n你确定删除吗</string>
</resources>
