<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/story_bg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ImageView_story_header"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/story_header"/>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="20dp"
                    android:layout_height="match_parent">
                </LinearLayout>


                <com.freecreator.whiteforest.ui.views.FontTextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text=""
                    android:textColor="@color/dark3"/>

                <com.freecreator.whiteforest.ui.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/greeting"
                    android:textColor="@color/dark3"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp">


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="20dp"
                    android:layout_height="match_parent">
                </LinearLayout>


                <com.freecreator.whiteforest.ui.views.FontTextView_Bold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:textSize="18sp"
                    android:text="@string/story_part1"
                    android:textColor="@color/dark3"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="20dp"
                    android:layout_height="match_parent">
                </LinearLayout>


                <com.freecreator.whiteforest.ui.views.FontTextView_Bold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:textSize="18sp"
                    android:text="@string/story_part2"
                    android:textColor="@color/dark3"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="20dp"
                    android:layout_height="match_parent">
                </LinearLayout>


                <com.freecreator.whiteforest.ui.views.FontTextView
                    android:id="@+id/user_name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text=""
                    android:textColor="@color/dark3"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="20dp"
                    android:layout_height="match_parent">
                </LinearLayout>


                <com.freecreator.whiteforest.ui.views.FontTextView_Bold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:textSize="18sp"
                    android:text="@string/story_part3"
                    android:textColor="@color/dark3"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">
            </LinearLayout>

            <ImageView
                android:id="@+id/ImageView_story_bottom"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/story_bottom"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>