<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    xmlns:app="http://schemas.android.com/apk/res-auto">




    <!--中部栏 内容 积分等-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="583"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:orientation="horizontal"></LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="540"
            android:orientation="vertical">





            <!--输入经验值-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="94"
                android:orientation="horizontal">

                <com.freecreator.whiteforest.ui.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/exp_to_add_timer"
                    android:textColor="@color/colorDialogText"
                    android:textSize="24sp" />


                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_exp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/colorDialogText"
                        android:textCursorDrawable="@null"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>

            <!--输入金币-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="106"
                android:orientation="horizontal">

                <com.freecreator.whiteforest.ui.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/coins_to_add_timer"
                    android:textColor="@color/colorDialogText"
                    android:textSize="24sp" />


                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_coins"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/colorDialogText"
                        android:textCursorDrawable="@null"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>


            <!--输入内容-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="312"
                android:orientation="horizontal">


                <com.freecreator.whiteforest.ui.views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_to_add"
                    android:textColor="@color/colorDialogText"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDialogText"
                        android:textCursorDrawable="@null"
                        android:textSize="24sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="71"
            android:orientation="horizontal"></LinearLayout>


    </LinearLayout>


</LinearLayout>